syntax = "proto3";


option java_multiple_files = true;
option java_package = "com.mibanco.novedadesES";
option java_outer_classname = "NovedadClienteCDTGrpc";

package NovedadClienteCDTGrpc;

message CrearNovedadCDTDigitalGrpc {
  string id = 1;
  string numeroDocumento = 2;
  string codigoNovedad =3;
  string descripcionNovedad = 4;
  string fechaNovedad = 5;
}

message Creado{
  CrearNovedadCDTDigitalGrpc novedadCDTDigital = 1;
}

message GetNovedadByDocumentRequest {
  string id = 1;
  string numeroDocumento = 2;
  string codigoNovedad =3;
  string descripcionNovedad = 4;
  string fechaNovedad = 5;
}

message NovedadResponse{
  GetNovedadByDocumentRequest novedadCDTDigital = 1;
}

service NovedadClienteCDTServiceGrpc {
  rpc crearNovedadCDT(CrearNovedadCDTDigitalGrpc) returns (Creado);
  rpc consultarNovedad(GetNovedadByDocumentRequest) returns (NovedadResponse);
}


